fixed text section on mobile

--- a/src/components/sections/sectextmob.css
+++ b/src/components/sections/sectextmob.css
@@ -7,9 +7,9 @@
 }
 
 .mh {
-    font-size: 0.7rem;
+    font-size:3vw;
 }
 
 .mpp  {
-    font-size: 0.5rem;
+    font-size: 2.8vw;
 }
